Fix sum error equation

--- a/bgd.ipynb
+++ b/bgd.ipynb
@@ -166,7 +166,7 @@
     "        b1_error = (1/len(x)) * np.sum((predictions - y) * x)\n",
     "        intercept = intercept - alpha * b0_error\n",
     "        coefficient = coefficient - alpha * b1_error \n",
-    "        sum_error = sum_error + np.sum((predictions - y) ** 2) / (2 * len(x))\n",
+    "        sum_error = np.sum((predictions - y) ** 2) / (2 * len(x))\n",
     "        df.loc[epoch] = [intercept, coefficient, sum_error]\n",
     "    return df"
    ]
