store result in CSVs in a folder

--- a/mbgd.ipynb
+++ b/mbgd.ipynb
@@ -193,7 +193,7 @@
    "source": [
     "fig, ax = plt.subplots(1, 2, figsize=(12, 6))\n",
     "\n",
-    "bgd_loss = pd.read_csv(\"./bgd_loss.csv\")\n",
+    "bgd_loss = pd.read_csv(\"./csv/bgd_loss.csv\")\n",
     "x = 10000\n",
     "half_x = int(x / 2) - 1\n",
     "quarter_x = int(x / 4) - 1\n",
@@ -418,7 +418,7 @@
     "\n",
     "anim = FuncAnimation(fig, update, repeat = True, frames=np.arange(0, len(mbgd_loss), 50), interval=10)\n",
     "anim.save(\n",
-    "    './mbgd.gif', \n",
+    "    './gif/mbgd.gif', \n",
     "    writer = PillowWriter(fps=60), \n",
     "    dpi = 150\n",
     ")\n",
@@ -494,6 +494,16 @@
     "ax[1].set_xlabel(r'$\\beta_0$')\n",
     "ax[1].set_ylabel(r'$\\beta_1$')\n",
     "ax[1].legend(fancybox=True, framealpha=1, shadow=True, borderpad=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save mbgd_loss to csv\n",
+    "mbgd_loss.to_csv('./csv/mbgd_loss.csv')"
    ]
   }
  ],
