--- a/bgd.ipynb
+++ b/bgd.ipynb
@@ -362,7 +362,7 @@
     "\n",
     "anim = FuncAnimation(fig, update, repeat = True, frames=np.arange(0, epochs, 50), interval=10)\n",
     "anim.save(\n",
-    "    './bgd.gif', \n",
+    "    './gif/bgd.gif', \n",
     "    writer = PillowWriter(fps=60), \n",
     "    dpi = 150\n",
     ")\n",
@@ -510,7 +510,7 @@
    "outputs": [],
    "source": [
     "# save bgd_loss to csv\n",
-    "gd_loss.to_csv('./bgd_loss.csv')"
+    "gd_loss.to_csv('./csv/bgd_loss.csv')"
    ]
   },
   {
@@ -540,7 +540,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4
  },
