--- a/adagrad.ipynb
+++ b/adagrad.ipynb
@@ -45,21 +45,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def adagrad(x, y, df, epochs = 100, learning_rate = 0.01):\n",
+    "def adagrad(x, y, df, epochs = 100, learning_rate = 0.01, eps=1e-8):\n",
     "    intercept, coefficient = -0.5, -0.75\n",
-    "    eps = 1e-8\n",
-    "    \n",
+    "\n",
     "    for epoch in range(0, epochs):\n",
-    "        intercept_gradient, coefficient_gradient = 0, 0\n",
     "        random_index = np.random.randint(len(features))\n",
     "        prediction = predict(intercept, coefficient, x[random_index])\n",
     "        error = prediction - y[random_index]\n",
-    "        intercept_gradient += error\n",
-    "        coefficient_gradient += error * x[random_index]\n",
-    "        intercept += -learning_rate * intercept_gradient / np.sqrt(eps + np.sum(intercept_gradient ** 2))\n",
-    "        coefficient += -learning_rate * coefficient_gradient / np.sqrt(eps + np.sum(coefficient_gradient ** 2))\n",
+    "        intercept_gradient = error\n",
+    "        coefficient_gradient = error * x[random_index]\n",
+    "        intercept -= (learning_rate / np.sqrt(intercept_gradient ** 2 + eps)) * intercept_gradient\n",
+    "        coefficient -= (learning_rate / np.sqrt(coefficient_gradient ** 2 + eps)) * coefficient_gradient\n",
     "\n",
-    "        df.loc[epoch] = [intercept, coefficient, error**2]\n",
+    "        mse = (error ** 2) / 2\n",
+    "        df.loc[epoch] = [intercept, coefficient, mse]\n",
     "\n",
     "    return df"
    ]
@@ -70,7 +69,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "adagrad_columns = ['intercept', 'coefficient', 'squared_error']\n",
+    "adagrad_columns = ['intercept', 'coefficient', 'mse']\n",
     "adagrad_loss_df = pd.DataFrame(columns=adagrad_columns)\n",
     "adagrad_loss_df = adagrad(sepal_length, petal_width, adagrad_loss_df)"
    ]
@@ -318,7 +317,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
